--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -1,5 +1,6 @@
 .hero {
   background: #3b3c38;
+  display: block;
   color: #fff;
   overflow: hidden;
   padding: 4rem 1rem 2rem;
@@ -144,6 +145,11 @@
 .mainContainer .wrapper.productShowcaseSection {
   text-align: center;
 }
+.mainContainer .wrapper.productShowcaseSection p {
+  margin: 0 auto;
+  max-width: 560px;
+  padding: 0.8em 0;
+}
 .mainContainer .wrapper.productShowcaseSection h2 {
   font-size: 30px;
   text-align: center;
@@ -177,4 +183,10 @@
 }
 .tier-silver-sponsors img {
   max-height: 45px;
+}
+
+h3 {
+  margin-bottom: 16px;
+  margin-top: 1.5em;
+  font-size: 20px;
 }
